# aws-org-view

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/aws_org_view/: __about__.py  __init__.py  client.py  query.py
tests/: conftest.py  test_retriever_result.py  test_view.py  test_view_account_and_hierarchy.py
tests/fakes/: organizations.py
